Fix menu + presenter on mobile.

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -15,7 +15,7 @@
 }
 @media (max-width: 999px) {
     .App { width: 95%; }
-    main { margin-top: 3em; }
+    main, #presenter { margin-top: 3em; }
 }
 
 
